crates/pgls_pretty_print/tests/snapshots/multi/tests__bit_100.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/bit_100.sql
snapshot_kind: text
---
CREATE TABLE bit_table (b BIT(11));

INSERT INTO bit_table VALUES (B'10');

INSERT INTO bit_table VALUES (B'00000000000');

INSERT INTO bit_table VALUES (B'11011000000');

INSERT INTO bit_table VALUES (B'01010101010');

INSERT INTO bit_table VALUES (B'101011111010');

SELECT * FROM bit_table;

CREATE TABLE varbit_table (v BIT VARYING(11));

INSERT INTO varbit_table VALUES (B'');

INSERT INTO varbit_table VALUES (B'0');

INSERT INTO varbit_table VALUES (B'010101');

INSERT INTO varbit_table VALUES (B'01010101010');

INSERT INTO varbit_table VALUES (B'101011111010');

SELECT * FROM varbit_table;

SELECT B' 0';

SELECT B'0 ';

SELECT X' 0';

SELECT X'0 ';

SELECT v, b, v || b AS concat FROM bit_table, varbit_table ORDER BY 3;

SELECT b, length(b) AS lb FROM bit_table;

SELECT v, length(v) AS lv FROM varbit_table;

SELECT
  b,
  SUBSTRING(b FROM 2 FOR 4) AS sub_2_4,
  SUBSTRING(b FROM 7 FOR 13) AS sub_7_13,
  SUBSTRING(b FROM 6) AS sub_6
FROM
  bit_table;

SELECT
  v,
  SUBSTRING(v FROM 2 FOR 4) AS sub_2_4,
  SUBSTRING(v FROM 7 FOR 13) AS sub_7_13,
  SUBSTRING(v FROM 6) AS sub_6
FROM
  varbit_table;

SELECT SUBSTRING(CAST('01010101' AS BIT(8)) FROM 2 FOR 2147483646) AS "1010101";

SELECT SUBSTRING(CAST('01010101' AS BIT(8)) FROM -10 FOR 2147483646) AS "01010101";

SELECT SUBSTRING(CAST('01010101' AS BIT(8)) FROM -10 FOR -2147483646) AS error;

SELECT SUBSTRING(CAST('01010101' AS BIT VARYING) FROM 2 FOR 2147483646) AS "1010101";

SELECT SUBSTRING(CAST('01010101' AS BIT VARYING) FROM -10 FOR 2147483646) AS "01010101";

SELECT SUBSTRING(CAST('01010101' AS BIT VARYING) FROM -10 FOR -2147483646) AS error;

DROP TABLE "varbit_table";

CREATE TABLE varbit_table (a BIT VARYING(16), b BIT VARYING(16));

SELECT a, b, ~a AS "~ a", a & b AS "a & b", a | b AS "a | b", a # b AS "a # b" FROM varbit_table;

SELECT
  a,
  b,
  a < b AS "a<b",
  a <= b AS "a<=b",
  a = b AS "a=b",
  a >= b AS "a>=b",
  a > b AS "a>b",
  a <> b AS "a<>b"
FROM
  varbit_table;

SELECT a, a << 4 AS "a<<4", b, b >> 2 AS "b>>2" FROM varbit_table;

DROP TABLE "varbit_table";

DROP TABLE "bit_table";

CREATE TABLE bit_table (a BIT(16), b BIT(16));

SELECT a, b, ~a AS "~ a", a & b AS "a & b", a | b AS "a | b", a # b AS "a # b" FROM bit_table;

SELECT
  a,
  b,
  a < b AS "a<b",
  a <= b AS "a<=b",
  a = b AS "a=b",
  a >= b AS "a>=b",
  a > b AS "a>b",
  a <> b AS "a<>b"
FROM
  bit_table;

SELECT a, a << 4 AS "a<<4", b, b >> 2 AS "b>>2" FROM bit_table;

DROP TABLE "bit_table";

SELECT B'001' & B'10';

SELECT B'0111' | B'011';

SELECT B'0010' # B'011101';

SELECT POSITION(B'1010' IN B'0000101');

SELECT POSITION(B'1010' IN B'00001010');

SELECT POSITION(B'1010' IN B'00000101');

SELECT POSITION(B'1010' IN B'000001010');

SELECT POSITION(B'' IN B'00001010');

SELECT POSITION(B'0' IN B'');

SELECT POSITION(B'' IN B'');

SELECT POSITION(B'101101' IN B'001011011011011000');

SELECT POSITION(B'10110110' IN B'001011011011010');

SELECT POSITION(B'1011011011011' IN B'001011011011011');

SELECT POSITION(B'1011011011011' IN B'00001011011011011');

SELECT POSITION(B'11101011' IN B'11101011');

SELECT POSITION(B'11101011' IN B'011101011');

SELECT POSITION(B'11101011' IN B'00011101011');

SELECT POSITION(B'11101011' IN B'0000011101011');

SELECT POSITION(B'111010110' IN B'111010110');

SELECT POSITION(B'111010110' IN B'0111010110');

SELECT POSITION(B'111010110' IN B'000111010110');

SELECT POSITION(B'111010110' IN B'00000111010110');

SELECT POSITION(B'111010110' IN B'11101011');

SELECT POSITION(B'111010110' IN B'011101011');

SELECT POSITION(B'111010110' IN B'00011101011');

SELECT POSITION(B'111010110' IN B'0000011101011');

SELECT POSITION(B'111010110' IN B'111010110');

SELECT POSITION(B'111010110' IN B'0111010110');

SELECT POSITION(B'111010110' IN B'000111010110');

SELECT POSITION(B'111010110' IN B'00000111010110');

SELECT POSITION(B'111010110' IN B'000001110101111101011');

SELECT POSITION(B'111010110' IN B'0000001110101111101011');

SELECT POSITION(B'111010110' IN B'000000001110101111101011');

SELECT POSITION(B'111010110' IN B'00000000001110101111101011');

SELECT POSITION(B'111010110' IN B'0000011101011111010110');

SELECT POSITION(B'111010110' IN B'00000011101011111010110');

SELECT POSITION(B'111010110' IN B'0000000011101011111010110');

SELECT POSITION(B'111010110' IN B'000000000011101011111010110');

SELECT POSITION(B'000000000011101011111010110' IN B'000000000011101011111010110');

SELECT POSITION(B'00000000011101011111010110' IN B'000000000011101011111010110');

SELECT POSITION(B'0000000000011101011111010110' IN B'000000000011101011111010110');

CREATE TABLE bit_shift_table (b BIT(16));

INSERT INTO bit_shift_table VALUES (B'1101100000000000');

INSERT INTO bit_shift_table SELECT b >> 1 FROM bit_shift_table;

INSERT INTO bit_shift_table SELECT b >> 2 FROM bit_shift_table;

INSERT INTO bit_shift_table SELECT b >> 4 FROM bit_shift_table;

INSERT INTO bit_shift_table SELECT b >> 8 FROM bit_shift_table;

SELECT POSITION(B'1101' IN b), POSITION(B'11011' IN b), b FROM bit_shift_table;

SELECT b, b >> 1 AS bsr, b << 1 AS bsl FROM bit_shift_table;

SELECT b, b >> 8 AS bsr8, b << 8 AS bsl8 FROM bit_shift_table;

SELECT
  CAST(b AS BIT(15)),
  CAST(b AS BIT(15)) >> 1 AS bsr,
  CAST(b AS BIT(15)) << 1 AS bsl
FROM
  bit_shift_table;

SELECT
  CAST(b AS BIT(15)),
  CAST(b AS BIT(15)) >> 8 AS bsr8,
  CAST(b AS BIT(15)) << 8 AS bsl8
FROM
  bit_shift_table;

CREATE TABLE varbit_shift_table (v BIT VARYING(20));

INSERT INTO varbit_shift_table VALUES (B'11011');

INSERT INTO varbit_shift_table
SELECT
  CAST(v || B'0' AS BIT VARYING(6)) >> 1
FROM
  varbit_shift_table;

INSERT INTO varbit_shift_table
SELECT
  CAST(v || B'00' AS BIT VARYING(8)) >> 2
FROM
  varbit_shift_table;

INSERT INTO varbit_shift_table
SELECT
  CAST(v || B'0000' AS BIT VARYING(12)) >> 4
FROM
  varbit_shift_table;

INSERT INTO varbit_shift_table
SELECT
  CAST(v || B'00000000' AS BIT VARYING(20)) >> 8
FROM
  varbit_shift_table;

SELECT POSITION(B'1101' IN v), POSITION(B'11011' IN v), v FROM varbit_shift_table;

SELECT v, v >> 1 AS vsr, v << 1 AS vsl FROM varbit_shift_table;

SELECT v, v >> 8 AS vsr8, v << 8 AS vsl8 FROM varbit_shift_table;

DROP TABLE "bit_shift_table";

DROP TABLE "varbit_shift_table";

SELECT get_bit(B'0101011000100', 10);

SELECT set_bit(B'0101011000100100', 15, 1);

SELECT set_bit(B'0101011000100100', 16, 1);

SELECT OVERLAY(B'0101011100' PLACING '001' FROM 2 FOR 3);

SELECT OVERLAY(B'0101011100' PLACING '101' FROM 6);

SELECT OVERLAY(B'0101011100' PLACING '001' FROM 11);

SELECT OVERLAY(B'0101011100' PLACING '001' FROM 20);

SELECT bit_count(CAST(B'0101011100' AS BIT(10)));

SELECT bit_count(CAST(B'1111111111' AS BIT(10)));

SELECT bit_count(CAST(repeat('0', 100) AS BIT(100)));

SELECT bit_count(CAST(repeat('1', 100) AS BIT(100)));

SELECT bit_count(CAST(repeat('01', 500) AS BIT(1000)));

SELECT bit_count(CAST(repeat('10101', 200) AS BIT(1000)));

CREATE TABLE bit_defaults (
  b1 BIT(4) DEFAULT '1001',
  b2 BIT(4) DEFAULT B'0101',
  b3 BIT VARYING(5) DEFAULT '1001',
  b4 BIT VARYING(5) DEFAULT B'0101'
);

INSERT INTO bit_defaults DEFAULT VALUES;

SELECT * FROM bit_defaults;

SELECT pg_input_is_valid('01010001', 'bit(10)');

SELECT * FROM pg_input_error_info('01010001', 'bit(10)');

SELECT pg_input_is_valid('01010Z01', 'bit(8)');

SELECT * FROM pg_input_error_info('01010Z01', 'bit(8)');

SELECT pg_input_is_valid('x01010Z01', 'bit(32)');

SELECT * FROM pg_input_error_info('x01010Z01', 'bit(32)');

SELECT pg_input_is_valid('01010Z01', 'varbit');

SELECT * FROM pg_input_error_info('01010Z01', 'varbit');

SELECT pg_input_is_valid('x01010Z01', 'varbit');

SELECT * FROM pg_input_error_info('x01010Z01', 'varbit');
