crates/pgls_pretty_print/tests/snapshots/multi/tests__boolean_100.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/boolean_100.sql
snapshot_kind: text
---
SELECT 1 AS one;

SELECT TRUE AS "true";

SELECT FALSE AS "false";

SELECT CAST('t' AS BOOLEAN) AS "true";

SELECT CAST('   f           ' AS BOOLEAN) AS "false";

SELECT CAST('true' AS BOOLEAN) AS "true";

SELECT CAST('test' AS BOOLEAN) AS error;

SELECT CAST('false' AS BOOLEAN) AS "false";

SELECT CAST('foo' AS BOOLEAN) AS error;

SELECT CAST('y' AS BOOLEAN) AS "true";

SELECT CAST('yes' AS BOOLEAN) AS "true";

SELECT CAST('yeah' AS BOOLEAN) AS error;

SELECT CAST('n' AS BOOLEAN) AS "false";

SELECT CAST('no' AS BOOLEAN) AS "false";

SELECT CAST('nay' AS BOOLEAN) AS error;

SELECT CAST('on' AS BOOLEAN) AS "true";

SELECT CAST('off' AS BOOLEAN) AS "false";

SELECT CAST('of' AS BOOLEAN) AS "false";

SELECT CAST('o' AS BOOLEAN) AS error;

SELECT CAST('on_' AS BOOLEAN) AS error;

SELECT CAST('off_' AS BOOLEAN) AS error;

SELECT CAST('1' AS BOOLEAN) AS "true";

SELECT CAST('11' AS BOOLEAN) AS error;

SELECT CAST('0' AS BOOLEAN) AS "false";

SELECT CAST('000' AS BOOLEAN) AS error;

SELECT CAST('' AS BOOLEAN) AS error;

SELECT pg_input_is_valid('true', 'bool');

SELECT pg_input_is_valid('asdf', 'bool');

SELECT * FROM pg_input_error_info('junk', 'bool');

SELECT CAST('t' AS BOOLEAN) OR CAST('f' AS BOOLEAN) AS "true";

SELECT CAST('t' AS BOOLEAN) AND CAST('f' AS BOOLEAN) AS "false";

SELECT NOT CAST('f' AS BOOLEAN) AS "true";

SELECT CAST('t' AS BOOLEAN) = CAST('f' AS BOOLEAN) AS "false";

SELECT CAST('t' AS BOOLEAN) <> CAST('f' AS BOOLEAN) AS "true";

SELECT CAST('t' AS BOOLEAN) > CAST('f' AS BOOLEAN) AS "true";

SELECT CAST('t' AS BOOLEAN) >= CAST('f' AS BOOLEAN) AS "true";

SELECT CAST('f' AS BOOLEAN) < CAST('t' AS BOOLEAN) AS "true";

SELECT CAST('f' AS BOOLEAN) <= CAST('t' AS BOOLEAN) AS "true";

SELECT
  CAST(CAST('TrUe' AS TEXT) AS BOOLEAN) AS "true",
  CAST(CAST('fAlse' AS TEXT) AS BOOLEAN) AS "false";

SELECT
  CAST(CAST('    true   ' AS TEXT) AS BOOLEAN)
  AS "true",
  CAST(CAST('     FALSE' AS TEXT) AS BOOLEAN)
  AS "false";

SELECT
  CAST(CAST(TRUE AS BOOLEAN) AS TEXT) AS "true",
  CAST(CAST(FALSE AS BOOLEAN) AS TEXT) AS "false";

SELECT CAST(CAST('  tru e ' AS TEXT) AS BOOLEAN) AS invalid;

SELECT CAST(CAST('' AS TEXT) AS BOOLEAN) AS invalid;

CREATE TABLE booltbl1 (f1 BOOLEAN);

INSERT INTO booltbl1 (f1) VALUES (CAST('t' AS BOOLEAN));

INSERT INTO booltbl1 (f1) VALUES (CAST('True' AS BOOLEAN));

INSERT INTO booltbl1 (f1) VALUES (CAST('true' AS BOOLEAN));

SELECT booltbl1.* FROM booltbl1;

SELECT booltbl1.* FROM booltbl1 WHERE f1 = CAST('true' AS BOOLEAN);

SELECT booltbl1.* FROM booltbl1 WHERE f1 <> CAST('false' AS BOOLEAN);

SELECT booltbl1.* FROM booltbl1 WHERE booleq(CAST('false' AS BOOLEAN), f1);

INSERT INTO booltbl1 (f1) VALUES (CAST('f' AS BOOLEAN));

SELECT booltbl1.* FROM booltbl1 WHERE f1 = CAST('false' AS BOOLEAN);

CREATE TABLE booltbl2 (f1 BOOLEAN);

INSERT INTO booltbl2 (f1) VALUES (CAST('f' AS BOOLEAN));

INSERT INTO booltbl2 (f1) VALUES (CAST('false' AS BOOLEAN));

INSERT INTO booltbl2 (f1) VALUES (CAST('False' AS BOOLEAN));

INSERT INTO booltbl2 (f1) VALUES (CAST('FALSE' AS BOOLEAN));

INSERT INTO booltbl2 (f1) VALUES (CAST('XXX' AS BOOLEAN));

SELECT booltbl2.* FROM booltbl2;

SELECT booltbl1.*, booltbl2.* FROM booltbl1, booltbl2 WHERE booltbl2.f1 <> booltbl1.f1;

SELECT booltbl1.*, booltbl2.* FROM booltbl1, booltbl2 WHERE boolne(booltbl2.f1, booltbl1.f1);

SELECT
  booltbl1.*,
  booltbl2.*
FROM
  booltbl1,
  booltbl2
WHERE
  booltbl2.f1 = booltbl1.f1 AND
  booltbl1.f1 = CAST('false' AS BOOLEAN);

SELECT
  booltbl1.*,
  booltbl2.*
FROM
  booltbl1,
  booltbl2
WHERE
  booltbl2.f1 = booltbl1.f1 OR
  booltbl1.f1 = CAST('true' AS BOOLEAN)
ORDER BY booltbl1.f1,
  booltbl2.f1;

SELECT f1 FROM booltbl1 WHERE f1 IS TRUE;

SELECT f1 FROM booltbl1 WHERE f1 IS NOT FALSE;

SELECT f1 FROM booltbl1 WHERE f1 IS FALSE;

SELECT f1 FROM booltbl1 WHERE f1 IS NOT TRUE;

SELECT f1 FROM booltbl2 WHERE f1 IS TRUE;

SELECT f1 FROM booltbl2 WHERE f1 IS NOT FALSE;

SELECT f1 FROM booltbl2 WHERE f1 IS FALSE;

SELECT f1 FROM booltbl2 WHERE f1 IS NOT TRUE;

CREATE TABLE booltbl3 (d TEXT, b BOOLEAN, o INT);

INSERT INTO booltbl3 (d, b, o) VALUES ('true', TRUE, 1);

INSERT INTO booltbl3 (d, b, o) VALUES ('false', FALSE, 2);

INSERT INTO booltbl3 (d, b, o) VALUES ('null', NULL, 3);

SELECT
  d,
  b IS TRUE AS istrue,
  b IS NOT TRUE AS isnottrue,
  b IS FALSE AS isfalse,
  b IS NOT FALSE AS isnotfalse,
  b IS UNKNOWN AS isunknown,
  b IS NOT UNKNOWN AS isnotunknown
FROM
  booltbl3
ORDER BY o;

CREATE TABLE booltbl4 (isfalse BOOLEAN, istrue BOOLEAN, isnul BOOLEAN);

INSERT INTO booltbl4 VALUES (FALSE, TRUE, NULL);

SELECT istrue AND isnul AND istrue FROM booltbl4;

SELECT istrue AND istrue AND isnul FROM booltbl4;

SELECT isnul AND istrue AND istrue FROM booltbl4;

SELECT isfalse AND isnul AND istrue FROM booltbl4;

SELECT istrue AND isfalse AND isnul FROM booltbl4;

SELECT isnul AND istrue AND isfalse FROM booltbl4;

SELECT isfalse OR isnul OR isfalse FROM booltbl4;

SELECT isfalse OR isfalse OR isnul FROM booltbl4;

SELECT isnul OR isfalse OR isfalse FROM booltbl4;

SELECT isfalse OR isnul OR istrue FROM booltbl4;

SELECT istrue OR isfalse OR isnul FROM booltbl4;

SELECT isnul OR istrue OR isfalse FROM booltbl4;

SELECT CAST(0 AS BOOLEAN);

SELECT CAST(1 AS BOOLEAN);

SELECT CAST(2 AS BOOLEAN);

DROP TABLE "booltbl1";

DROP TABLE "booltbl2";

DROP TABLE "booltbl3";

DROP TABLE "booltbl4";
